fixed spacing of logo in opening, edited README; added 'zoom-in' on hover

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,9 +7,12 @@
 @import "partials/fonts";
 
 .container {
-  @include flexed(column, space-around, null, nowrap);
-  // height: 100%;
+  @include flexed(column, space-between, center, nowrap);
+  height: 100%;
   width: 100%;
+  @include desktop {
+    align-items: flex-start;
+  }
 }
 p {
   font-size: 1rem;
@@ -17,10 +20,27 @@ p {
   font-family: "opensans-light";
 }
 
+.site-header {
+  @include flexed(column, space-between, center, nowrap);
+  margin: auto;
+  padding: 1rem;
+  width: 100%;
+  @include tablet {
+    @include flexed($wrap: nowrap);
+    // padding: 2rem;
+    padding-left: 0;
+    margin-left: 0;
+    border: 0;
+  }
+  @include desktop {
+    @include flexed($justify: flex-start, $wrap: nowrap);
+  }
+}
 .header-active {
   @include flexed(column, center, center, nowrap);
   height: auto;
   flex: 1 0 auto;
+  padding: 1rem;
   @include tablet {
     @include flexed(row, flex-start, center, nowrap);
     margin-left: 0;
@@ -30,29 +50,7 @@ p {
     height: auto;
     @include tablet {
       height: 80px;
-      // margin: 0;
     }
-  }
-}
-.site-header {
-  @include flexed(column, space-between, space-between, nowrap);
-  margin: auto;
-  // max-width: 450px;
-  padding: 1rem;
-  width: 100%;
-
-  @include tablet {
-    @include flexed($wrap: nowrap);
-    padding: 2rem;
-    padding-left: 0;
-    margin-left: 0;
-    border: 0;
-    // margin: auto;
-    // max-width: 400px;
-  }
-  @include desktop {
-    @include flexed(row, flex-start, center, nowrap);
-    margin-left: 1rem;
   }
 }
 
@@ -61,8 +59,6 @@ p {
   font-family: "opensans-light";
   font-size: 1.1rem;
   padding: 1rem;
-  padding-top: 1rem;
-  // margin: auto;
   flex-shrink: 0;
   p {
     margin-bottom: 1rem;
@@ -93,12 +89,10 @@ p {
   display: flex;
   flex-shrink: 1;
   flex-basis: 25%;
-  // margin: auto;
   min-width: 150px;
   @include tablet {
     max-width: 100%;
     min-width: 150px;
-    // height: auto;
     flex-shrink: 1;
     flex-basis: 25%;
     margin-right: 1rem;
@@ -115,7 +109,15 @@ p {
 .loading {
   width: 80px;
   height: auto;
-  align-self: center;
+  text-align: center;
+}
+.center-load {
+  display: flex;
+  flex-direction: column;
+  img {
+    justify-content: center;
+    align-self: center;
+  }
 }
 .stories {
   display: flex;
@@ -147,12 +149,41 @@ p {
     p {
       text-align: left;
       background: linear-gradient(rgba(0, 0, 0, 0.6) 0, rgba(0, 0, 0, 0.6));
-      line-height: 1.25;
+      line-height: 1.3;
       padding: 12px;
-      padding-left: 11px;
+      padding-left: 1.5rem;
       margin-bottom: 0;
       height: auto;
       color: $font-color;
+      font-size: 0.93rem;
+      @include tablet {
+        padding-left: 1.2rem;
+        padding-right: 11px;
+      }
+    }
+  }
+}
+
+li {
+  transition: all 1s ease 0.1s;
+  &:hover {
+    transform: scale(1.1);
+    p {
+      font-size: 1rem;
+      @include tablet {
+        &:nth-child(odd) {
+          padding-left: 1rem;
+          padding-right: 11px;
+        }
+        &:nth-child(even) {
+          padding-right: 1rem;
+          padding-left: 11px;
+        }
+      }
+      @include tablet {
+        padding-left: 13px;
+        font-size: 0.98rem;
+      }
     }
   }
 }
@@ -161,7 +192,6 @@ p {
   color: #c2c2c2;
   text-align: center;
   margin: 1.5rem 0;
-  // padding-bottom: 0;
   font-size: 0.9rem;
   @include tablet {
   }
